# FSM-implementation

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  dfa.cpp  lambda_nfa.cpp  main.cpp
src/finite_state_machine/: dfa.hpp  fsm.hpp  lambda_nfa.hpp
src/tests/: dfa.txt  lambda_nfa.txt
